# tcp-app

./: .gitignore
tcp-client/: CMakeLists.txt  build.sh
tcp-client/debian-manifest/: control
tcp-client/src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
tcp-server/: CMakeLists.txt  build.sh
tcp-server/debian-manifest/: control
tcp-server/src/: helpers.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
tcp-server/src/widget/: tcpserverwidget.cpp  tcpserverwidget.h  tcpserverwidget.ui
tcp-server/src/widget/entity/: client.cpp  client.h
tcp-server/src/widget/model/: clientstablemodel.cpp  clientstablemodel.h
